name:                bruce-socket
version:             0.1.0
synopsis:            Send and receive Bruce protocol messages through UNIX domain
                     datagram sockets or TCP stream sockets.
license:             MPL-2.0
license-file:        LICENSE
author:              Roman S. Borschel
maintainer:          roman@pkaboo.org
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
    default-language: Haskell2010
    hs-source-dirs:   src
    ghc-options:      -Wall -O2 -fwarn-tabs
    ghc-prof-options: -prof -auto-all

    exposed-modules:
        Network.Bruce.Socket

    other-modules:
        Network.Bruce.Socket.Peek

    build-depends:
        base           == 4.*
      , bytestring     >= 0.10.4
      , bruce-protocol >= 0.1
      , cereal         >= 0.4
      , network        >= 2.6
